# returns-portal-parcelLab

./: AI_LOG.md  DECISIONS.md  README.md  pyproject.toml
portal/: api.py  urls.py  views.py
portal/data/: eligibility_rules.yaml
portal/services/: eligibility.py  lookup_throttle.py  mapper.py
portal/templates/returns/: _article_selection_panel.html  articles.html  confirm.html  success.html
portal/tests/: test_api.py
portal/tests/services/: test_eligibility.py  test_views.py
